--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     rev: 6.1.0
     hooks:
       - id: flake8
-  - repo: https://github.com/s-weigand/flake8-nb
-    rev: v0.5.3
-    hooks:
-      - id: flake8-nb
+#  - repo: https://github.com/s-weigand/flake8-nb
+#    rev: v0.5.3
+#    hooks:
+#      - id: flake8-nb
