--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,15 +4,24 @@ repos:
     hooks:
       - id: nbstripout
         files: ".ipynb"
-  - repo: https://github.com/psf/black
-    rev: 23.12.0
+  - repo: https://github.com/psf/black-pre-commit-mirror
+    rev: 23.12.1
     hooks:
-      - id: black
+      - id: black-jupyter
+        # It is recommended to specify the latest version of Python
+        # supported by your project here, or alternatively use
+        # pre-commit's default_language_version, see
+        # https://pre-commit.com/#top_level-default_language_version
+        language_version: python3.11
+  # - repo: https://github.com/psf/black
+  #   rev: 23.12.0
+  #   hooks:
+  #     - id: black
   - repo: https://github.com/pycqa/flake8
     rev: 6.1.0
     hooks:
       - id: flake8
-#  - repo: https://github.com/s-weigand/flake8-nb
-#    rev: v0.5.3
-#    hooks:
-#      - id: flake8-nb
+  - repo: https://github.com/s-weigand/flake8-nb
+    rev: v0.5.3
+    hooks:
+      - id: flake8-nb
