--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
         # supported by your project here, or alternatively use
         # pre-commit's default_language_version, see
         # https://pre-commit.com/#top_level-default_language_version
-        language_version: python3.11
+        language_version: python3.9
   # - repo: https://github.com/psf/black
   #   rev: 23.12.0
   #   hooks:
@@ -21,7 +21,7 @@ repos:
     rev: 6.1.0
     hooks:
       - id: flake8
-  - repo: https://github.com/s-weigand/flake8-nb
-    rev: v0.5.3
-    hooks:
-      - id: flake8-nb
+#  - repo: https://github.com/s-weigand/flake8-nb
+#    rev: v0.5.3
+#    hooks:
+#      - id: flake8-nb
