--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,13 +9,13 @@ repos:
     hooks:
       - id: black-jupyter
         # It is recommended to specify the latest version of Python
-        # supported by your project here, or alternatively use
+        # supp  orted by your project here, or alternatively use
         # pre-commit's default_language_version, see
         # https://pre-commit.com/#top_level-default_language_version
-  # - repo: https://github.com/psf/black
-  #   rev: 23.12.0
-  #   hooks:
-  #     - id: black
+  - repo: https://github.com/psf/black
+    rev: 23.12.0
+    hooks:
+      - id: black
   - repo: https://github.com/pycqa/flake8
     rev: 6.1.0
     hooks:
