--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,10 +4,10 @@ repos:
     hooks:
       - id: nbstripout
         files: ".ipynb"
-  - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 23.12.1
-    hooks:
-      - id: black-jupyter
+#  - repo: https://github.com/psf/black-pre-commit-mirror
+#    rev: 23.12.1
+#    hooks:
+#      - id: black-jupyter
         # It is recommended to specify the latest version of Python
         # supp  orted by your project here, or alternatively use
         # pre-commit's default_language_version, see
